--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
     "author": "加号减减号",
-    "homepage_url": "https://github.com/plu-s/CSDN_CLEANER.git",
+    "homepage_url": "https://addons.mozilla.org/zh-CN/firefox/addon/csdn_cleaner/",
     
 	"manifest_version": 2,
 	"name": "CSDN_CLEANER",
-	"version": "1.0",
+	"version": "1.1",
 	
 	"description": "清除CSDN博客页面无关信息，使界面更清净",
 	
